--- a/css/styles.css
+++ b/css/styles.css
@@ -3,9 +3,13 @@
   width: 40%;
   padding: 10px;
   margin: 20px; 
+  text-align: justify;
 
 }
 .about-me a {
   color:black;
   text-decoration:none;
+}
+h1 {
+  text-align: center;
 }
