--- a/css/styles.css
+++ b/css/styles.css
@@ -21,3 +21,8 @@ h1 {
   font-family:Georgia, 'Times New Roman', Times, serif;
   color:black;
 }
+.repos {
+  color:black;
+  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode',Verdana, sans-serif;
+  font-size: 16px;
+}
