I've added an a:hover where when a user hovers over the link it will change to the colour red

--- a/css/styles.css
+++ b/css/styles.css
@@ -25,4 +25,13 @@ h1 {
   color:black;
   font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode',Verdana, sans-serif;
   font-size: 16px;
+  text-decoration:none;
+}
+.repos a {
+  color:black;
+  font-size: 16px;
+  text-decoration:none;
+}
+a:hover {
+  color:red
 }
