--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 body {
-  color:#F0F3F4;
+  background-color:#FEF5E7;
 }
 .about-me {
   border: 3px solid black;
@@ -20,12 +20,15 @@ h1 {
   text-align: center;
   font-family:Georgia, 'Times New Roman', Times, serif;
   color:black;
+  font-weight:bold;
+  font-size:40px;
 }
 .repos {
   color:black;
   font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode',Verdana, sans-serif;
   font-size: 16px;
   text-decoration:none;
+  text-align:justify;
 }
 .repos a {
   color:black;
@@ -34,4 +37,12 @@ h1 {
 }
 a:hover {
   color:red
+}
+img {
+  width: 30%;
+  height: 30%;
+  float:right;
+  transform:rotate(90deg);
+  border: 3px solid black;
+  margin-top:60px;
 }
