--- a/css/styles.css
+++ b/css/styles.css
@@ -26,7 +26,6 @@ h1 {
   color:black;
   font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode',Verdana, sans-serif;
   font-size: 16px;
-  text-decoration:none;
   text-align:justify;
 }
 .repos a {
@@ -44,6 +43,35 @@ img {
   transform:rotate(90deg);
   border: 3px solid black;
   margin-top:54px;
-  float:right;
   margin-right: 100px
 }
+@media screen 
+  and (max-width: 800px) 
+  and (max-height: 1600px)  {
+    .about-me {
+      border: 3px solid black;
+      padding: 10px;
+      width:100%;
+      margin: 0px; 
+      text-align: justify;
+      font-family:Georgia, 'Times New Roman', Times, serif;
+      color:black;
+      background-color: #85929E;
+      }
+    img {
+      width:32%;
+      height:32%;
+      transform:rotate(90deg);
+      margin-top:40px;
+      margin-right: 100px;
+      float:left;
+      }
+    .repos a {
+      font-size: 16px;
+      color:red;
+    }
+    .about-me a {
+      text-decoration:none;
+      color:red;
+    }
+  }
