--- a/css/styles.css
+++ b/css/styles.css
@@ -13,7 +13,7 @@ body {
 }
 .about-me a {
   text-decoration:none;
-  color:black;
+  color:red;
 }
 h1 {
   text-align: center;
@@ -29,13 +29,11 @@ h1 {
   text-align:justify;
 }
 .repos a {
-  color:black;
+  color:red;
   font-size: 16px;
   text-decoration:none;
 }
-a:hover {
-  color:red
-}
+
 img {
   width:32%;
   height:32%;
